Fixed the mistake that cause music player indicator to jump when changing a song

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,8 +5,7 @@
 	font-style: normal;
 }
 
-audio
-{
+audio {
 	display: none;
 }
 
@@ -192,8 +191,7 @@ html {
 
 // -------------------------------------------------
 
-.play-section
-{
+.play-section {
 	padding: 1.6rem 2.4rem;
 	background: linear-gradient(to bottom, #5a1a0e, #0d0d0d);
 }
@@ -206,158 +204,148 @@ html {
 	height: 5.8rem;
 	font-size: 2rem;
 	background-color: #1ed760;
-	border:none;
+	border: none;
 	border-radius: 50%;
-	cursor:pointer;
+	cursor: pointer;
 
-	&:hover{
+	&:hover {
 		background-color: #3ae577;
-		transform:scale(1.05);
+		transform: scale(1.05);
 	}
 }
 
-.music-list-header
-{
+.music-list-header {
 	margin-bottom: 2.4rem;
 	font-size: 3.2rem;
-	color:#fff;	
+	color: #fff;
 }
 
-.track-list
-{
+.track-list {
 	display: flex;
 	flex-direction: column;
-	gap:1.6rem;
+	gap: 1.6rem;
 	margin-left: 3.2rem;
 	max-width: 60rem;
-	color:#fff;
+	color: #fff;
 	list-style: none;
 }
 
-.track{
+.track {
 	display: flex;
 	align-items: center;
-	gap:12.8rem;
+	gap: 12.8rem;
 	padding: 0.8rem 1.6rem;
 	font-size: 1.6rem;
-	border-radius:1rem;
+	border-radius: 1rem;
 
-	&:hover{
+	&:hover {
 		background-color: #372d26;
 	}
 
-	&:hover .track-number
-	{
+	&:hover .track-number {
 		display: none;
 	}
 
-	&:hover .play-track-icon
-	{
+	&:hover .play-track-icon {
 		display: block;
 	}
 }
 
-.track-main-info
-{
+.track-main-info {
 	display: flex;
 	align-items: center;
-	gap:1.6rem;
-	flex-grow:1;
+	gap: 1.6rem;
+	flex-grow: 1;
 }
 
-.track-number{
+.track-number {
 	font-weight: bold;
-	color:#a9a9a8;
+	color: #a9a9a8;
 }
 
-.play-track-icon{
+.play-track-icon {
 	font-size: 1.2rem;
 	display: none;
 }
 
-.track-image{
+.track-image {
 	width: 4.8rem;
 	height: 4.8rem;
 }
 
-.track-plays,.track-duration{
-	color:#a9a9a8;
+.track-plays,
+.track-duration {
+	color: #a9a9a8;
 }
 
 // ------------------------------------------------
 
-.music-player
-{
+.music-player {
 	display: flex;
 	justify-content: space-between;
 	padding: 1.2rem;
-	color:white;
+	color: white;
 }
 
-.music-player-item{
+.music-player-item {
 	display: flex;
 	align-items: center;
-	gap:1.2rem;
+	gap: 1.2rem;
 	font-size: 1.6rem;
 }
 
-.music-player-item:nth-child(2)
-{
+
+.music-player-item:nth-child(2) {
 	flex-direction: column;
 	justify-content: center;
 }
 
-.music-player-img{
+.music-player-img {
 	width: 6rem;
 	height: 6rem;
-	
 }
 
-.btn{
-	color:#b3b3b3;
+.btn {
+	color: #b3b3b3;
 	background: none;
-	border:none;
-	cursor:pointer;
+	border: none;
+	cursor: pointer;
 }
 
-.music-options
-{
+.music-options {
 	display: flex;
-	gap:3.2rem;
+	gap: 3.2rem;
 }
 
-.music-player-icon{
+.music-player-icon {
 	font-size: 2rem;
 
-	&:hover{
-		color:white;
-		transform:scale(1.05)
+	&:hover {
+		color: white;
+		transform: scale(1.05);
 	}
 }
 
-.music-player-pause-btn
-{
+.music-player-pause-btn {
 	display: none;
 }
 
-.music-player-main-icon{
+.music-player-main-icon {
 	font-size: 3.2rem;
-	color:white;
+	color: white;
 }
 
-.progress-bar{
+.progress-bar {
 	display: flex;
 	align-items: center;
-	gap:0.8rem;
+	gap: 0.8rem;
 }
 
-.progress-bar span{
+.progress-bar span {
 	font-size: 1.4rem;
-	color:#a9a9a8;
+	color: #a9a9a8;
 }
 
-.song-progress
-{
+.song-progress {
 	width: 50rem;
 }
-
